Starting on the actual tooltip component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<apply-tooltip event="click" content="Wow, ya clicked">
+<apply-tooltip event="click" [content]="'Wow, ya clicked on the left button'">
   <button>
     Ailurus
   </button>
 </apply-tooltip>
 
-<apply-tooltip event="click" content="Wow, ya clicked">
+<apply-tooltip event="click" [content]="'Wow, ya clicked on the right button'">
   <button>
     Fulgens
   </button>
