Super basic styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
-<apply-tooltip event="click" [content]="'Wow, ya clicked on the left button'">
-  <button>
-    Ailurus
-  </button>
-</apply-tooltip>
+<main>
+  <apply-tooltip event="click" [content]="'left button'">
+    <button>
+      Ailurus
+    </button>
+  </apply-tooltip>
 
-<apply-tooltip event="click" [content]="'Wow, ya clicked on the right button'">
-  <button>
-    Fulgens
-  </button>
-</apply-tooltip>
+  <apply-tooltip event="click" [content]="'right button'">
+    <button>
+      Fulgens
+    </button>
+  </apply-tooltip>
+</main>
