--- a/src/app/tooltip/apply-tooltip/apply-tooltip.component.scss
+++ b/src/app/tooltip/apply-tooltip/apply-tooltip.component.scss
@@ -1,15 +1,19 @@
 .tooltip-container {
+  display: inline-block;
   position: relative;
 
   .tooltip {
     display: none;
     position: absolute;
     top: 0;
-    left: 0;
-    transform: translateY(-100%);
+    left: 50%;
+    transform: translate(-50%, -100%);
+    background: #000;
+    color: #FFF;
+    padding: 5px 10px;
 
     &.active {
-      display: block;
+      display: inline-block;
     }
   }
 }
