--- a/src/app/tooltip/apply-tooltip/apply-tooltip.component.html
+++ b/src/app/tooltip/apply-tooltip/apply-tooltip.component.html
@@ -2,7 +2,7 @@
   <div [class]="'tooltip' + (isOpen ? ' active' : '')">
     {{ content }}
   </div>
-  <div (mouseover)="showTooltip()" (mouseout)="hideTooltip()">
+  <div (click)="toggleTooltip()">
     <ng-content></ng-content>
   </div>
 </div>
