Renamed 'ApplyTooltipComponent' to 'TooltipComponent' and created a 'TooltipsComponent' that will act as a UI State Container

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <main>
-  <apply-tooltip event="click" [content]="'left button'">
+  <tooltip event="click" [content]="'left button'">
     <button>
       Ailurus
     </button>
-  </apply-tooltip>
+  </tooltip>
 
-  <apply-tooltip event="click" [content]="'right button'">
+  <tooltip event="click" [content]="'right button'">
     <button>
       Fulgens
     </button>
-  </apply-tooltip>
+  </tooltip>
 </main>
