Set up a super basic service as a state container instead

--- a/src/app/tooltip/tooltip/tooltip.component.html
+++ b/src/app/tooltip/tooltip/tooltip.component.html
@@ -2,7 +2,7 @@
   <div [class]="'tooltip' + (isOpen ? ' active' : '')">
     {{ content }}
   </div>
-  <div (click)="toggleTooltip()">
+  <div (click)="showTooltip()">
     <ng-content></ng-content>
   </div>
 </div>
