Much nicer to use @HostBinding instead of one way binding for the current class name on the tooltip

--- a/src/app/tooltip/tooltip/tooltip.component.html
+++ b/src/app/tooltip/tooltip/tooltip.component.html
@@ -1,5 +1,5 @@
 <div class="tooltip-container">
-  <div [class]="'tooltip' + (isOpen ? ' active' : '')">
+  <div class="tooltip">
     {{ content }}
   </div>
   <div (click)="showTooltip()">
