--- a/src/app/tooltip/tooltip/tooltip.component.scss
+++ b/src/app/tooltip/tooltip/tooltip.component.scss
@@ -1,19 +1,26 @@
-.tooltip-container {
-  display: inline-block;
-  position: relative;
 
-  .tooltip {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, -100%);
-    background: #000;
-    color: #FFF;
-    padding: 5px 10px;
+:host {
+  &.active {
+    .tooltip-container {
+      .tooltip {
+        display: inline-block;
+      }
+    }
+  }
 
-    &.active {
-      display: inline-block;
+  .tooltip-container {
+    display: inline-block;
+    position: relative;
+
+    .tooltip {
+      display: none;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translate(-50%, -100%);
+      background: #000;
+      color: #FFF;
+      padding: 5px 10px;
     }
   }
 }
