--- a/src/app/tooltip/tooltip/tooltip.component.html
+++ b/src/app/tooltip/tooltip/tooltip.component.html
@@ -1,4 +1,4 @@
-<div class="tooltip-container">
+<div class="tooltip-container" (click)='$event.stopPropagation()'>
   <div class="tooltip">
     {{ content }}
   </div>
