--- a/src/app/tooltip/tooltip/tooltip.component.html
+++ b/src/app/tooltip/tooltip/tooltip.component.html
@@ -1,8 +1,16 @@
 <div class="tooltip-container" (click)='$event.stopPropagation()'>
-  <div class="tooltip">
-    {{ content }}
+  <div [class]="'tooltip fade bs-tooltip-top ' + (isOpen ? 'show' : 'hide')">
+    <div class="arrow"></div>
+    <div class="tooltip-inner" [id]="uid">{{ content }}</div>
   </div>
   <div (click)="showTooltip()">
     <ng-content></ng-content>
   </div>
+</div>
+
+
+<div class="tooltip fade bs-tooltip-top show" role="tooltip" id="tooltip242304" style="will-change: transform; position: absolute; transform: translate3d(300px, 1557px, 0px); top: 0px; left: 0px;"
+  x-placement="top">
+  <div class="arrow" style="left: 48px;"></div>
+  <div class="tooltip-inner">Tooltip on top</div>
 </div>
