--- a/src/app/tooltip/tooltip/tooltip.component.scss
+++ b/src/app/tooltip/tooltip/tooltip.component.scss
@@ -1,26 +1,16 @@
+.tooltip-container {
+  display: inline-block;
+  position: relative;
 
-:host {
-  &.active {
-    .tooltip-container {
-      .tooltip {
-        display: inline-block;
-      }
-    }
-  }
+  .tooltip {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -100%);
 
-  .tooltip-container {
-    display: inline-block;
-    position: relative;
-
-    .tooltip {
-      display: none;
-      position: absolute;
-      top: 0;
+    .arrow {
       left: 50%;
-      transform: translate(-50%, -100%);
-      background: #000;
-      color: #FFF;
-      padding: 5px 10px;
+      transform: translateX(-50%);
     }
   }
 }
