Added some basic aria meta data for ATs, this tooltip actually acts like an alert, as the user has to directly interact with an object before it displays

--- a/src/app/tooltip/tooltip/tooltip.component.html
+++ b/src/app/tooltip/tooltip/tooltip.component.html
@@ -1,9 +1,9 @@
 <div class="tooltip-container" (click)='$event.stopPropagation()'>
   <div [class]="'tooltip fade bs-tooltip-top ' + (isOpen ? 'show' : 'hide')">
     <div class="arrow"></div>
-    <div class="tooltip-inner" [id]="uid">{{ content }}</div>
+    <div class="tooltip-inner" role="alert" [attr.aria-hidden]="!isOpen" [id]="uid">{{ content }}</div>
   </div>
-  <div (click)="showTooltip()">
+  <div (click)="showTooltip()" [attr.aria-labelledby]="uid">
     <ng-content></ng-content>
   </div>
 </div>
