Oops, missed declaring isOpen on the tooltip component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <main>
-  <tooltip event="click" [content]="'left button'">
+  <tooltip event="click" content="left button">
     <button>
       Ailurus
     </button>
   </tooltip>
 
-  <tooltip event="click" [content]="'right button'">
+  <tooltip event="click" content="right button">
     <button>
       Fulgens
     </button>
