--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <main>
-  <tooltip event="click" content="left button">
+  <tooltip content="left button">
     <button>
       Ailurus
     </button>
   </tooltip>
 
-  <tooltip event="click" content="right button">
+  <tooltip content="right button">
     <button>
       Fulgens
     </button>
