Tooltips will not scroll off the browser now

--- a/src/app/tooltip/tooltip/tooltip.component.html
+++ b/src/app/tooltip/tooltip/tooltip.component.html
@@ -1,9 +1,9 @@
 <div class="tooltip-container" (click)='$event.stopPropagation()'>
-  <div [class]="'tooltip fade bs-tooltip-top ' + (isOpen ? 'show' : 'hide')">
+  <div #tooltip [class]="'tooltip fade bs-tooltip-' + (offScreen ? 'bottom' : 'top') + ' ' + (isOpen ? 'show' : 'hide')">
     <div class="arrow"></div>
     <div class="tooltip-inner" role="alert" [attr.aria-hidden]="!isOpen" [id]="uid">{{ content }}</div>
   </div>
-  <div (click)="showTooltip()" [attr.aria-labelledby]="uid">
+  <div #target (click)="showTooltip()" [attr.aria-labelledby]="uid">
     <ng-content></ng-content>
   </div>
 </div>
