--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
 <main>
-  <tooltip content="left button">
-    <button>
-      Ailurus
-    </button>
-  </tooltip>
+  <section>
+    <tooltip content="left button">
+      <button>
+        Ailurus
+      </button>
+    </tooltip>
 
-  <tooltip content="right button">
-    <button>
-      Fulgens
-    </button>
-  </tooltip>
+    <tooltip content="right button">
+      <button>
+        Fulgens
+      </button>
+    </tooltip>
+  </section>
 </main>
