--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,10 @@
-main {
+section {
   display: flex;
   justify-content: space-around;
   align-items: center;
   height: 100vh;
   width: 100vw;
+  padding: 200px 0 150vh;
 }
 
 body {
