--- a/src/app/tooltip/tooltip/tooltip.component.scss
+++ b/src/app/tooltip/tooltip/tooltip.component.scss
@@ -8,6 +8,12 @@
     left: 50%;
     transform: translate(-50%, -100%);
 
+    &.bs-tooltip-bottom {
+      top: initial;
+      bottom: 0;
+      transform: translate(-50%, 100%);
+    }
+
     .arrow {
       left: 50%;
       transform: translateX(-50%);
