--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,3 @@
 <main>
-  <section>
-    <tooltip content="left button">
-      <button>
-        Ailurus
-      </button>
-    </tooltip>
-
-    <tooltip content="right button">
-      <button>
-        Fulgens
-      </button>
-    </tooltip>
-  </section>
+  <router-outlet></router-outlet>
 </main>
