Hmm, not sure why I used single quotes here instead of double quotes, fixed

--- a/src/app/tooltip/tooltip/tooltip.component.html
+++ b/src/app/tooltip/tooltip/tooltip.component.html
@@ -1,4 +1,4 @@
-<div class="tooltip-container" (click)='$event.stopPropagation()'>
+<div class="tooltip-container" (click)="$event.stopPropagation()">
   <div #tooltip [class]="'tooltip fade bs-tooltip-' + (offScreen ? 'bottom' : 'top') + ' ' + (isOpen ? 'show' : 'hide')">
     <div class="arrow"></div>
     <div class="tooltip-inner" role="alert" [attr.aria-hidden]="!isOpen" [id]="uid">{{ content }}</div>
